[package]
name = "cli-url-shortener"
version = "0.1.0"
authors = ["Matan Budimir <36965687+MatanBudimir@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
clap = "~2.27.0"